fish-pepper updates